--- a/index.html
+++ b/index.html
@@ -11,5 +11,29 @@
 
     <title>Links Diretos</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <img
+        src="./assets/img/foto-profissional.jpg"
+        alt="Jonathan vestido profissionalmente"
+      />
+      <div>
+        <h1>Jonathan Almeida</h1>
+        <h2>Desenvolvedor | Design</h2>
+        <div class="stacks">
+          <img src="./assets/img/html.svg" alt="logotipo html" />
+          <img src="./assets/img/css.svg" alt="logotipo css" />
+          <img src="./assets/img/javaScript.svg" alt="logotipo javaScript" />
+          <img src="./assets/img/python.svg" alt="logotipo python" />
+          <img src="./assets/img/vba.svg" alt="logotipo vba" />
+          <img src="./assets/img/nodeJs.svg" alt="logotipo nodejs" />
+          <img src="./assets/img/git.svg" alt="logotipo git" />
+          <img src="./assets/img/vscode.svg" alt="logotipo vscode" />
+          <img src="./assets/img/notion.svg" alt="logotipo notion" />
+          <img src="./assets/img/figma.svg" alt="logotipo figma" />
+          <img src="./assets/img/linux.svg" alt="logotipo linux" />
+        </div>
+      </div>
+    </header>
+  </body>
 </html>
