feat: header almost completed. Apresenting my stacks and myself

--- a/index.html
+++ b/index.html
@@ -8,30 +8,46 @@
       content="Links de direcionamentos para redes sociais"
     />
     <meta name="Jonathan" content="github.com/jonathanasf" />
-
+    <link rel="stylesheet" href="./css/reset.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <title>Links Diretos</title>
   </head>
   <body>
-    <header>
+    <header class="header">
       <img
+        class="header-profile-image"
         src="./assets/img/foto-profissional.jpg"
         alt="Jonathan vestido profissionalmente"
       />
-      <div>
+      <div class="header-informations">
         <h1>Jonathan Almeida</h1>
         <h2>Desenvolvedor | Design</h2>
-        <div class="stacks">
-          <img src="./assets/img/html.svg" alt="logotipo html" />
-          <img src="./assets/img/css.svg" alt="logotipo css" />
-          <img src="./assets/img/javaScript.svg" alt="logotipo javaScript" />
-          <img src="./assets/img/python.svg" alt="logotipo python" />
-          <img src="./assets/img/vba.svg" alt="logotipo vba" />
-          <img src="./assets/img/nodeJs.svg" alt="logotipo nodejs" />
-          <img src="./assets/img/git.svg" alt="logotipo git" />
-          <img src="./assets/img/vscode.svg" alt="logotipo vscode" />
-          <img src="./assets/img/notion.svg" alt="logotipo notion" />
-          <img src="./assets/img/figma.svg" alt="logotipo figma" />
-          <img src="./assets/img/linux.svg" alt="logotipo linux" />
+        <div class="stacks-techs">
+          <div class="stacks">
+            <img src="./assets/img/html.svg" alt="logotipo html" />
+            <img src="./assets/img/css.svg" alt="logotipo css" />
+            <img src="./assets/img/javaScript.svg" alt="logotipo javaScript" />
+            <img src="./assets/img/python.svg" alt="logotipo python" />
+            <img src="./assets/img/vba.svg" alt="logotipo vba" />
+            <img src="./assets/img/nodeJs.svg" alt="logotipo nodejs" />
+            <img src="./assets/img/git.svg" alt="logotipo git" />
+            <img src="./assets/img/vscode.svg" alt="logotipo vscode" />
+            <img src="./assets/img/notion.svg" alt="logotipo notion" />
+            <img src="./assets/img/figma.svg" alt="logotipo figma" />
+            <img src="./assets/img/linux.svg" alt="logotipo linux" />
+
+            <img src="./assets/img/html.svg" alt="logotipo html" />
+            <img src="./assets/img/css.svg" alt="logotipo css" />
+            <img src="./assets/img/javaScript.svg" alt="logotipo javaScript" />
+            <img src="./assets/img/python.svg" alt="logotipo python" />
+            <img src="./assets/img/vba.svg" alt="logotipo vba" />
+            <img src="./assets/img/nodeJs.svg" alt="logotipo nodejs" />
+            <img src="./assets/img/git.svg" alt="logotipo git" />
+            <img src="./assets/img/vscode.svg" alt="logotipo vscode" />
+            <img src="./assets/img/notion.svg" alt="logotipo notion" />
+            <img src="./assets/img/figma.svg" alt="logotipo figma" />
+            <img src="./assets/img/linux.svg" alt="logotipo linux" />
+          </div>
         </div>
       </div>
     </header>
