feat: links added and pre configuraded visually

--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
     <meta name="Jonathan" content="github.com/jonathanasf" />
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/style.css" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap"
+      rel="stylesheet"
+    />
+
     <title>Links Diretos</title>
   </head>
   <body>
@@ -51,5 +59,43 @@
         </div>
       </div>
     </header>
+    <main>
+      <section class="btn">
+        <div class="btn-link">
+          <img src="./assets/img/logo.svg" alt="" /><a
+            href="https://portfolio-new-sage-ten.vercel.app"
+            >Portfolio</a
+          ><img src="/assets/img/logo.svg" />
+        </div>
+
+        <div class="btn-link">
+          <img src="./assets/img/linkedin.png" alt="" /><a
+            href="https://www.linkedin.com/in/jonathanasf/"
+            >Linkedin</a
+          ><img src="./assets/img/linkedin.png" />
+        </div>
+
+        <div class="btn-link">
+          <img src="./assets/img/github.png" alt="" /><a
+            href="https://github.com/JonathanAsf"
+            >GitHub</a
+          ><img src="./assets/img/github.png" />
+        </div>
+
+        <div class="btn-link">
+          <img src="./assets/img/instagram.png" alt="" /><a
+            href="https://www.instagram.com/dev_jow?igsh=a2V0ZmI1a2wyejM3&utm_source=qr"
+            >Instagram</a
+          ><img src="./assets/img/instagram.png" />
+        </div>
+
+        <div class="btn-link">
+          <img src="./assets/img/youtube.png" alt="" /><a
+            href="https://youtu.be/WwXXI8oVutA?si=QfVYV8ShABHGlNZV&utm_source=MTQxZ"
+            >Youtube</a
+          ><img src="./assets/img/youtube.png" />
+        </div>
+      </section>
+    </main>
   </body>
 </html>
