feat: improving images qualities changing from png to svg

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </header>
     <main>
       <section class="btn">
-        <div class="btn-link">
+        <div class="btn-link portfolio">
           <img src="./assets/img/logo.svg" alt="" /><a
             href="https://portfolio-new-sage-ten.vercel.app"
             >Portfolio</a
@@ -69,31 +69,31 @@
         </div>
 
         <div class="btn-link">
-          <img src="./assets/img/linkedin.png" alt="" /><a
+          <img src="./assets/img/linkedin.svg" alt="" /><a
             href="https://www.linkedin.com/in/jonathanasf/"
             >Linkedin</a
-          ><img src="./assets/img/linkedin.png" />
+          ><img src="./assets/img/linkedin.svg" />
         </div>
 
         <div class="btn-link">
-          <img src="./assets/img/github.png" alt="" /><a
+          <img src="./assets/img/github.svg" alt="" /><a
             href="https://github.com/JonathanAsf"
             >GitHub</a
-          ><img src="./assets/img/github.png" />
+          ><img src="./assets/img/github.svg" />
         </div>
 
         <div class="btn-link">
-          <img src="./assets/img/instagram.png" alt="" /><a
+          <img src="./assets/img/instagram.svg" alt="" /><a
             href="https://www.instagram.com/dev_jow?igsh=a2V0ZmI1a2wyejM3&utm_source=qr"
             >Instagram</a
-          ><img src="./assets/img/instagram.png" />
+          ><img src="./assets/img/instagram.svg" />
         </div>
 
         <div class="btn-link">
-          <img src="./assets/img/youtube.png" alt="" /><a
+          <img src="./assets/img/youtube.svg" alt="" /><a
             href="https://youtu.be/WwXXI8oVutA?si=QfVYV8ShABHGlNZV&utm_source=MTQxZ"
             >Youtube</a
-          ><img src="./assets/img/youtube.png" />
+          ><img src="./assets/img/youtube.svg" />
         </div>
       </section>
     </main>
