--- a/index.html
+++ b/index.html
@@ -97,5 +97,8 @@
         </div>
       </section>
     </main>
+    <footer class="footer">
+      <p>&copy; 2025 Jonathan Almeida. Todos os direitos reservados.</p>
+    </footer>
   </body>
 </html>
