--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
       rel="stylesheet"
     />
 
+    <link
+      rel="shortcut icon"
+      href="./assets/img/logo.svg"
+      type="image/x-icon"
+    />
+
     <title>Links Diretos</title>
   </head>
   <body>
