fix: link to stack-images was wrong

--- a/index.html
+++ b/index.html
@@ -10,20 +10,17 @@
     <meta name="Jonathan" content="github.com/jonathanasf" />
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/style.css" />
-
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap"
       rel="stylesheet"
     />
-
     <link
       rel="shortcut icon"
       href="./assets/img/logo.svg"
       type="image/x-icon"
     />
-
     <title>Links Diretos</title>
   </head>
   <body>
@@ -40,10 +37,10 @@
           <div class="stacks">
             <img src="./assets/img/html.svg" alt="logotipo html" />
             <img src="./assets/img/css.svg" alt="logotipo css" />
-            <img src="./assets/img/javaScript.svg" alt="logotipo javaScript" />
+            <img src="./assets/img/javascript.svg" alt="logotipo javaScript" />
             <img src="./assets/img/python.svg" alt="logotipo python" />
             <img src="./assets/img/vba.svg" alt="logotipo vba" />
-            <img src="./assets/img/nodeJs.svg" alt="logotipo nodejs" />
+            <img src="./assets/img/nodejs.svg" alt="logotipo nodejs" />
             <img src="./assets/img/git.svg" alt="logotipo git" />
             <img src="./assets/img/vscode.svg" alt="logotipo vscode" />
             <img src="./assets/img/notion.svg" alt="logotipo notion" />
@@ -52,10 +49,10 @@
 
             <img src="./assets/img/html.svg" alt="logotipo html" />
             <img src="./assets/img/css.svg" alt="logotipo css" />
-            <img src="./assets/img/javaScript.svg" alt="logotipo javaScript" />
+            <img src="./assets/img/javascript.svg" alt="logotipo javaScript" />
             <img src="./assets/img/python.svg" alt="logotipo python" />
             <img src="./assets/img/vba.svg" alt="logotipo vba" />
-            <img src="./assets/img/nodeJs.svg" alt="logotipo nodejs" />
+            <img src="./assets/img/nodejs.svg" alt="logotipo nodejs" />
             <img src="./assets/img/git.svg" alt="logotipo git" />
             <img src="./assets/img/vscode.svg" alt="logotipo vscode" />
             <img src="./assets/img/notion.svg" alt="logotipo notion" />
