fiz: trying to fix bugimages

--- a/index.html
+++ b/index.html
@@ -37,24 +37,22 @@
           <div class="stacks">
             <img src="./assets/img/html.svg" alt="logotipo html" />
             <img src="./assets/img/css.svg" alt="logotipo css" />
-            <img src="./assets/img/javascript.svg" alt="logotipo javaScript" />
+            <img src="./assets/img/javascript.svg" alt="logotipo javascript" />
             <img src="./assets/img/python.svg" alt="logotipo python" />
             <img src="./assets/img/vba.svg" alt="logotipo vba" />
             <img src="./assets/img/nodejs.svg" alt="logotipo nodejs" />
             <img src="./assets/img/git.svg" alt="logotipo git" />
-            <img src="./assets/img/vscode.svg" alt="logotipo vscode" />
             <img src="./assets/img/notion.svg" alt="logotipo notion" />
             <img src="./assets/img/figma.svg" alt="logotipo figma" />
             <img src="./assets/img/linux.svg" alt="logotipo linux" />
 
             <img src="./assets/img/html.svg" alt="logotipo html" />
             <img src="./assets/img/css.svg" alt="logotipo css" />
-            <img src="./assets/img/javascript.svg" alt="logotipo javaScript" />
+            <img src="./assets/img/javascript.svg" alt="logotipo javascript" />
             <img src="./assets/img/python.svg" alt="logotipo python" />
             <img src="./assets/img/vba.svg" alt="logotipo vba" />
             <img src="./assets/img/nodejs.svg" alt="logotipo nodejs" />
             <img src="./assets/img/git.svg" alt="logotipo git" />
-            <img src="./assets/img/vscode.svg" alt="logotipo vscode" />
             <img src="./assets/img/notion.svg" alt="logotipo notion" />
             <img src="./assets/img/figma.svg" alt="logotipo figma" />
             <img src="./assets/img/linux.svg" alt="logotipo linux" />
