fix: change images name to force update on Vercel

--- a/index.html
+++ b/index.html
@@ -35,27 +35,33 @@
         <h2>Desenvolvedor | Design</h2>
         <div class="stacks-techs">
           <div class="stacks">
-            <img src="./assets/img/html.svg" alt="logotipo html" />
-            <img src="./assets/img/css.svg" alt="logotipo css" />
-            <img src="./assets/img/javascript.svg" alt="logotipo javascript" />
-            <img src="./assets/img/python.svg" alt="logotipo python" />
-            <img src="./assets/img/vba.svg" alt="logotipo vba" />
-            <img src="./assets/img/nodejs.svg" alt="logotipo nodejs" />
-            <img src="./assets/img/git.svg" alt="logotipo git" />
-            <img src="./assets/img/notion.svg" alt="logotipo notion" />
-            <img src="./assets/img/figma.svg" alt="logotipo figma" />
-            <img src="./assets/img/linux.svg" alt="logotipo linux" />
+            <img src="./assets/img/temp-html.svg" alt="logotipo html" />
+            <img src="./assets/img/temp-css.svg" alt="logotipo css" />
+            <img
+              src="./assets/img/temp-javascript.svg"
+              alt="logotipo javascript"
+            />
+            <img src="./assets/img/temp-python.svg" alt="logotipo python" />
+            <img src="./assets/img/temp-vba.svg" alt="logotipo vba" />
+            <img src="./assets/img/temp-nodejs.svg" alt="logotipo nodejs" />
+            <img src="./assets/img/temp-git.svg" alt="logotipo git" />
+            <img src="./assets/img/temp-notion.svg" alt="logotipo notion" />
+            <img src="./assets/img/temp-figma.svg" alt="logotipo figma" />
+            <img src="./assets/img/temp-linux.svg" alt="logotipo linux" />
 
-            <img src="./assets/img/html.svg" alt="logotipo html" />
-            <img src="./assets/img/css.svg" alt="logotipo css" />
-            <img src="./assets/img/javascript.svg" alt="logotipo javascript" />
-            <img src="./assets/img/python.svg" alt="logotipo python" />
-            <img src="./assets/img/vba.svg" alt="logotipo vba" />
-            <img src="./assets/img/nodejs.svg" alt="logotipo nodejs" />
-            <img src="./assets/img/git.svg" alt="logotipo git" />
-            <img src="./assets/img/notion.svg" alt="logotipo notion" />
-            <img src="./assets/img/figma.svg" alt="logotipo figma" />
-            <img src="./assets/img/linux.svg" alt="logotipo linux" />
+            <img src="./assets/img/temp-html.svg" alt="logotipo html" />
+            <img src="./assets/img/temp-css.svg" alt="logotipo css" />
+            <img
+              src="./assets/img/temp-javascript.svg"
+              alt="logotipo javascript"
+            />
+            <img src="./assets/img/temp-python.svg" alt="logotipo python" />
+            <img src="./assets/img/temp-vba.svg" alt="logotipo vba" />
+            <img src="./assets/img/temp-nodejs.svg" alt="logotipo nodejs" />
+            <img src="./assets/img/temp-git.svg" alt="logotipo git" />
+            <img src="./assets/img/temp-notion.svg" alt="logotipo notion" />
+            <img src="./assets/img/temp-figma.svg" alt="logotipo figma" />
+            <img src="./assets/img/temp-linux.svg" alt="logotipo linux" />
           </div>
         </div>
       </div>
