feat: Desktop view improved and media screen added

--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
         </div>
       </div>
     </header>
-    <main>
-      <section class="btn">
+    <main class="main">
+      <section class="section-btn">
         <div class="btn-link portfolio">
           <img src="./assets/img/logo.svg" alt="" /><a
             href="https://portfolio-new-sage-ten.vercel.app"
